--- a/cardapio.html
+++ b/cardapio.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cardapio.css">
     <title>Dino's Cardápio</title>
 </head>
 <body>
     <header id="header">
         <nav class="navegacao">
             <div class="item">
-
+                <a href="">CARDÁPIO</a>
             </div>
             <div class="itemImagem">
-                
+                <a href=""><img src="img/logo.png" alt=""></a>
             </div>
             <div class="item">
-                
+                <a href="">PEÇA PELO APP</a>
             </div>
         </nav>
     </header>
