--- a/rodape.html
+++ b/rodape.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="rodape.css">
     <title>Rodapé</title>
 </head>
+
 <body>
-    
+    <footer id="footer">
+        <div class="colunas">
+            <div class="coluna1">
+                <a href="#header">
+                    <div class="logo">
+                        <img src="img/logo.png" alt="logo" class="logoIMG">
+                    </div>
+                </a>
+                <div class="funcionamento">
+                    <p class="titulo">FUNCIONAMENTO</p>
+                    <div class="horarios">
+                        <p class="texto">Terça, Quarta e Domingo <span>- 16h ás 2h</span></p>
+                        <p class="texto">Quinta, Sexta e Sabádo <span>- 16h ás 0h</span></p>
+                        <p class="texto">Segunda <span>- FECHADO</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="coluna2">
+                <a href="#header">
+                    <div class="home">
+                        <p class="titulo">HOME</p>
+                    </div>
+                </a>
+                <div class="nossasPizzas">
+                    <p class="titulo">NOSSAS PIZZAS</p>
+                    <div class="pizzas">
+                        <div class="parte1">
+                            <p class="texto">Queijo</p>
+                            <p class="texto">Pepperoni</p>
+                            <p class="texto">Clássica</p>
+                            <p class="texto">Mr. Pink</p>
+                            <p class="texto">Brócolis e Limão</p>
+                        </div>
+                        <div class="parte2">
+                            <p class="texto">Torta Branca</p>
+                            <p class="texto">Salame Picante</p>
+                            <p class="texto">Bacon e Cebola</p>
+                            <p class="texto">Fim de Semana</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="coluna3">
+                <div class="contato">
+                    <p class="titulo">CONTATO</p>
+                    <p class="texto">dinostomatopie@gmail.com</p>
+                </div>
+                <div class="unidade">
+                    <p class="titulo">UNIDADE</p>
+                    <p class="texto">1524 E Olive Wy, Seattle, WA 98122, Estados Unidos</p>
+                </div>
+                <div class="redes">
+                    <p class="titulo">REDES SOCIAIS</p>
+                    <div class="imagensRedes">
+                        <a href="https://www.facebook.com/Dinostomatopie/"><img src="img/facebook.png" alt="facebook" class="redesIMG"></a>
+                        <a href="https://www.instagram.com/dinosseattle/"><img src="img/instagram.png" alt="instagram" class="redesIMG"></a>
+                        <a href="https://twitter.com/dinostomatopie"><img src="img/twitter.png" alt="twitter" class="redesIMG"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="linha"></div>
+        <div class="final">
+            <p class="textoFinal">© 2024 Dino’s Tomato Pie - Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
+
 </html>
