--- a/cardapio.html
+++ b/cardapio.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cardapio.css">
     <title>Dino's Cardápio</title>
 </head>
+
 <body>
     <header id="header">
-        <nav class="navegacao">
+        <div class="cabecalho">
             <div class="item">
                 <a href="">CARDÁPIO</a>
             </div>
@@ -18,10 +20,179 @@
             <div class="item">
                 <a href="">PEÇA PELO APP</a>
             </div>
-        </nav>
+        </div>
     </header>
     <main id="main">
+        <section class="section1">
+            <div class="fundo">
+                <div class="titulo">
+                    <h1>Nosso Cardápio</h1>
+                </div>
+            </div>
+        </section>
+        <div class="navTudo">
+            <nav class="navegacao">
+                <a href="">Fatias</a>
+                <a href="">Pizza</a>
+                <a href="">Coberturas</a>
+                <a href="">Nó de Alho</a>
+                <a href="">Salada</a>
+            </nav>
+        </div>
+        <section class="section" id="fatias">
+            <div class="sabores">
+                <div class="tituloSabores">
+                    <h3>Fatias</h3>
+                </div>
+                <div class="todosSaboresPrim">
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Queijo</h5>
+                            <p>Redonda - <span>$4,40</span></p>
+                            <p>Quadrada - <span>$5,74</span></p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/fatias1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tipoSabores">
+                        <div class="textoSabores">
+                            <h5>Pepperoni</h5>
+                            <p>Redonda - <span>$5</span></p>
+                            <p>Quadrada - <span>$6</span></p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/fatias2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Queijo Branco</h5>
+                            <p>Somente Redonda - <span>$4,55</span></p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/fatias3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="pizzas">
+            <div class="sabores">
+                <div class="tituloSabores">
+                    <h3>Pizzas</h3>
+                </div>
+                <div class="todosSabores">
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Queijo</h5>
+                            <p>Molho de tomate, mussarela fresca e envelhecida, parmesão, manjericão fresco</p>
+                            <p>Redonda - $25</p>
+                            <p>Quadrada - $22</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Pepperoni</h5>
+                            <p>Molho de tomate, mussarela fresca e envelhecida, parmesão, manjericão fresco</p>
+                            <p>Redonda - $25</p>
+                            <p>Quadrada - $22</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Clássico</h5>
+                            <p>Molho de tomate, mussarela fresca, parmesão, anchovas deliciosas, manjericão, óleo de
+                                pimenta, alho, parmesão</p>
+                            <p>Somente Redonda - $26</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Mr. Pink</h5>
+                            <p>Molho de Vodka (cebola, alho, creme), mussarela fresca, ricota, manjericão fresco,
+                                parmesão</p>
+                            <p>Redonda - $28</p>
+                            <p>Quadrada - $31</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Brócolis e limão em conserva</h5>
+                            <p>Brócolis, limão em conserva, mussarela fresca e envelhecida, alho, parmesão</p>
+                            <p>Somente Redonda - $28</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza5.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Pizza Queijo Branca</h5>
+                            <p>Ricota, mussarela fresca e envelhecida, alho, parmesão</p>
+                            <p>Somente Redonda - $28</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza6.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Pizza de Salame Picante</h5>
+                            <p>Molho de tomate, mussarela fresca e envelhecida, salame picante da Zoe, cebola, parmesão
+                            </p>
+                            <p>Redonda - $27</p>
+                            <p>Quadrada - $30</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza7.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Pizza de Bancon e Cabola</h5>
+                            <p>Molho de tomate, mussarela fresca e envelhecida, bacon Zoe's, cebola, parmesão</p>
+                            <p>Redonda - $27</p>
+                            <p>Quadrada - $30</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza8.png" alt="">
+                        </div>
+                    </div>
+                    <div class="tiposSabores">
+                        <div class="textoSabores">
+                            <h5>Fim de Semana no Dino</h5>
+                            <p>Molho de tomate, mussarela fresca e envelhecida, bacon da Zoe, abacaxi, jalapeños em
+                                conserva da casa, parmesão</p>
+                            <p>Redonda - $25</p>
+                            <p>Quadrada - $22</p>
+                        </div>
+                        <div class="imgSabores">
+                            <img src="img/pizza9.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section">
 
+        </section>
+        <section class="section">
+
+        </section>
     </main>
 </body>
+
 </html>
