--- a/cardapio.html
+++ b/cardapio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cardapio.css">
     <title>Dino's Cardápio</title>
+    <link rel="icon" href="img/pizzaLogo.png">
 </head>
 
 <body>
