--- a/cardapio.html
+++ b/cardapio.html
@@ -13,13 +13,13 @@
     <header id="header">
         <div class="cabecalho">
             <div class="item">
-                <a href="">CARDÁPIO</a>
+                <a href="cardapio.html">CARDÁPIO</a>
             </div>
             <div class="itemImagem">
                 <a href="index.html"><img src="img/logo.png" alt=""></a>
             </div>
             <div class="item">
-                <a href="">PEÇA PELO APP</a>
+                <a href="https://order.online/store/dino's-tomato-pie-seattle-1085111/?delivery=true&hideModal=true">PEÇA PELO APP</a>
             </div>
         </div>
     </header>
