--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <header id="header">
         <div class="cabecalho">
             <div class="item">
-                <a href="">CARDÁPIO</a>
+                <a href="cardapio.html">CARDÁPIO</a>
             </div>
             <div class="itemImagem">
                 <a href="index.html"><img src="img/logo.png" alt=""></a>
             </div>
             <div class="item">
-                <a href="">PEÇA PELO APP</a>
+                <a href="https://order.online/store/dino's-tomato-pie-seattle-1085111/?delivery=true&hideModal=true">PEÇA PELO APP</a>
             </div>
         </div>
     </header>
@@ -89,13 +89,13 @@
                     <div class="delivery">
                         <p class="titulo-cardapio titulo-delivery">DELIVERY</p>
                         <p class="texto-delivery">Peça sua comida e receba ela no conforto de sua casa</p>
-                        <button class="peca">Peça aqui</button>
+                        <a href="https://order.online/store/dino's-tomato-pie-seattle-1085111/?delivery=true&hideModal=true" class="peca">Peça aqui</a>
                     </div>
                     <div class="delivery">
                         <p class="titulo-cardapio titulo-delivery">RETIRADA</p>
                         <p class="texto-delivery">O serviço mais rápido de atendimento, peça em casa e retire na
                             nossa unidade</p>
-                        <button class="peca">Peça aqui</button>
+                        <a href="https://order.online/store/dino's-tomato-pie-seattle-1085111/?hideModal=true&pickup=true" class="peca">Peça aqui</a>
                     </div>
                 </div>
                 <div class="imagem-delivery">
