--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main id="main">
         <div class="inicio">
             <img src="img/principalIndex.png" alt="Imagem da pizza">
         </div>
@@ -129,7 +129,7 @@
     <footer id="footer">
         <div class="colunas">
             <div class="coluna1">
-                <a href="#header">
+                <a href="index.html">
                     <div class="logo">
                         <img src="img/logo.png" alt="logo" class="logoIMG">
                     </div>
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="coluna2">
-                <a href="#header">
+                <a href="#main">
                     <div class="home">
                         <p class="titulo">HOME</p>
                     </div>
