--- a/cardapio.html
+++ b/cardapio.html
@@ -462,7 +462,7 @@
     <footer id="footer">
         <div class="colunas">
             <div class="coluna1">
-                <a href="#header">
+                <a href="index.html">
                     <div class="logo">
                         <img src="img/logo.png" alt="logo" class="logoIMG">
                     </div>
@@ -477,7 +477,7 @@
                 </div>
             </div>
             <div class="coluna2">
-                <a href="#topo">
+                <a href="index.html">
                     <div class="home">
                         <p class="titulo">HOME</p>
                     </div>
